Fix GitHub Workflow for OIDC

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <h1>Raman's Cloud Resume</h1>
     <p>Welcome to my AWS-powered resume! Built with S3 for the Cloud Resume Challenge.</p>
+    <p>Deployed via GitHub Actions.</p>
     
     <div class="section">
         <h2>About Me</h2>
