--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <h1>Raman's Cloud Resume</h1>
     <p>Welcome to my AWS-powered resume! Built with S3 for the Cloud Resume Challenge.</p>
-    <p>Deployed via GitHub Actions.</p>
-    
+    <p>Deployed via GitHub Actions. Check the workflow <a href="https://github.com/radlakha/crc-aws/actions">here</a>.</p>
+
     <div class="section">
         <h2>About Me</h2>
         <p>Cloud enthusiast learning AWS. Contact: raman@example.com</p>
