--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <h1>Raman's Cloud Resume</h1>
     <p>Welcome to my AWS-powered resume! Built with S3 for the Cloud Resume Challenge.</p>
-    <p>Deployed via GitHub Actions. Check the workflow <a href="https://github.com/radlakha/crc-aws/actions">here</a>.</p>
+    <p>Deployed via GitHub Actions. <br>
+    Check the workflow <a href="https://github.com/radlakha/crc-aws/actions">here</a>.</p>
 
     <div class="section">
         <h2>About Me</h2>
