--- a/site/index.html
+++ b/site/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <h1>Raman's Cloud Resume</h1>
+    <p>This is a test for deploy fix.</p>
     <p>Welcome to my AWS-powered resume! Built with S3 for the Cloud Resume Challenge.</p>
     <p>Deployed via GitHub Actions. <br>
     Check the workflow <a href="https://github.com/radlakha/crc-aws/actions">here</a>.</p>
