Update deployment test message in index.html
Added note about logging in GitHub Actions.

--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Raman's Cloud Resume</h1>
-    <p>This is a test for deploy fix. Only deploy the site.</p>
+    <p>This is a test for deploy fix. Only deploy the site. See the logging in github actions.</p>
     <p>Welcome to my AWS-powered resume! Built with S3 for the Cloud Resume Challenge.</p>
     <p>Deployed via GitHub Actions. <br>
     Check the workflow <a href="https://github.com/radlakha/crc-aws/actions">here</a>.</p>
