--- a/site/index.html
+++ b/site/index.html
@@ -13,6 +13,7 @@
 <body>
     <h1>Raman's Cloud Resume</h1>
     <p>This is a test for deploy fix. Only deploy the site. See the logging in github actions.</p>
+    <p>Invalidation fixed - Nov 28, 2025 13:58</p>
     <p>Welcome to my AWS-powered resume! Built with S3 for the Cloud Resume Challenge.</p>
     <p>Deployed via GitHub Actions. <br>
     Check the workflow <a href="https://github.com/radlakha/crc-aws/actions">here</a>.</p>
